--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "better-youtube",
-  "version": "2.0.0",
+  "version": "2.1.1",
   "description": "Open Source YouTube Desktop Client with Plugin System",
   "main": "dist/main/index.js",
   "homepage": "./",
@@ -24,12 +24,14 @@
   "license": "MIT",
   "dependencies": {
     "@cliqz/adblocker-electron": "^1.26.11",
+    "@xhayper/discord-rpc": "^1.3.0",
     "cross-fetch": "^4.0.0",
+    "discord-api-types": "^0.38.37",
     "discord-rpc": "^4.0.1",
-    "ytdl-core": "^4.11.5",
     "electron-store": "^8.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "ytdl-core": "^4.11.5"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
@@ -49,14 +51,14 @@
     "directories": {
       "output": "release"
     },
-      "files": [
-        "dist/**/*",
-        "settings.html",
-        "build/**/*",
-        "extensions/**/*",
-        "node_modules/**/*",
-        "package.json"
-      ],
+    "files": [
+      "dist/**/*",
+      "settings.html",
+      "build/**/*",
+      "extensions/**/*",
+      "node_modules/**/*",
+      "package.json"
+    ],
     "asarUnpack": [
       "dist/settings.html",
       "dist/assets/**/*",
