--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "cross-fetch": "^4.0.0",
     "discord-api-types": "^0.38.37",
     "discord-rpc": "^4.0.1",
+    "electron-log": "^5.4.3",
     "electron-store": "^8.1.0",
+    "electron-updater": "^6.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "ytdl-core": "^4.11.5"
@@ -84,6 +86,11 @@
     "nsis": {
       "oneClick": false,
       "allowToChangeInstallationDirectory": true
+    },
+    "publish": {
+      "provider": "github",
+      "owner": "Yabosen",
+      "repo": "Better-Youtube"
     }
   }
 }
