Remove Discord and LastFM integrations and related files
Deleted all Discord Rich Presence and Last.fm scrobbler integration files, including supporting utilities and constants. Updated package.json and package-lock.json to remove related dependencies. Cleaned up main process and preload scripts to reflect the removal of these integrations.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "better-youtube",
-  "version": "2.2.1-Berkut",
+  "version": "2.2.1pz-Berkut",
   "description": "Open Source YouTube Desktop Client with Plugin System",
   "main": "dist/main/index.js",
   "homepage": "./",
