--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "better-youtube",
-  "version": "2.2.1-pzX1-Berkut",
+  "version": "2.2.2-E-Berkut",
   "description": "Open Source YouTube Desktop Client with Plugin System",
   "main": "dist/main/index.js",
   "homepage": "./",
