--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "better-youtube",
-  "version": "2.2.1-Berkut",
+  "version": "2.2.2-E-Berkut",
   "description": "Open Source YouTube Desktop Client with Plugin System",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Yabosen/Better-Youtube.git"
+  },
   "main": "dist/main/index.js",
   "homepage": "./",
   "scripts": {
@@ -29,6 +33,7 @@
     "discord-api-types": "^0.38.37",
     "discord-rpc": "^4.0.1",
     "electron-store": "^8.1.0",
+    "electron-updater": "^6.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "ytdl-core": "^4.11.5"
