--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "better-youtube",
-  "version": "2.2.2-E-Berkut",
+  "version": "2.3.0-M2-Terminator",
   "description": "Open Source YouTube Desktop Client with Plugin System",
   "repository": {
     "type": "git",
